[project]
name = "dj4h"
version = "0.1.0"
description = ""
authors = [
    { name = "Gamingdy" }
]
readme = "README.md"
requires-python = "~3.13"
dependencies = [
    "py-cord (==2.8.0)",
    "python-dotenv (==1.2.2)",
    "pillow (==12.2.0)",
    "sqlalchemy[asyncio] (==2.0.50)",
    "aiosqlite (==0.22.1)",
    "alembic (==1.18.4)",
    "requests (>=2.34.2,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "26.5.1"